--- a/package.json
+++ b/package.json
@@ -18,16 +18,24 @@
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "csv-loader": "^3.0.5",
     "html-webpack-plugin": "^5.5.0",
+    "postcss-import": "^15.0.0",
+    "postcss-nesting": "^10.1.10",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.8",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.0"
+    "webpack-dev-server": "^4.10.0",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.2",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5"
   }
