--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "run-p start:**",
     "start:watch": "webpack --watch",
-    "start:serve": "webpack serve --open",
+    "start": "webpack serve --open --config webpack.dev.js",
     "start:tailwind": "tailwindcss -i ./src/assets/css/styles.css -o ./dist/output.css --watch",
-    "build": "webpack"
+    "build": "webpack --config webpack.prod.js"
+
   },
   "keywords": [],
   "author": "mrp-171",
